Replace Font size btn with Stereo btn
This is the first of four commits to enable mono downmixing.

1. This. Add a button as basic framework.
2. Migration from legacy media player to media3 exoplayer, which supports advanced audio features
3. Make stereo button actually working
4. Add back ability to change font size in options menu